2009-07-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Artem for NB#126898.

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_restack_real): Don't restack if
	MBWMCompMgrClutterClientDontShow is set.

2009-07-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#128595 [RGBA GTK+/sapwood] modalblocker popping up without
		  a dialog locks the UI
	NB#128661 [RGBA GTK+/sapwood] Application windows not mapped,
		  only titlebar visible.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  Don't fail with the frame window creation if the client is argb32.

2009-07-17  Aapo Kojo  <aapo.kojo@nokia.com>

	Release 0.2.47

2009-07-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-stack.c: If an application has
	non-application-modal windows stacked above application-modal windows,
	force the application-modal windows to the top; otherwise the
	application will appear to have locked up. Fixes NB#115408.

2009-07-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Debug macro and hooks to trace window moves and resizes.

	* matchbox/core/mb-wm-debug.h:
	  Added MB_WM_DBG_MOVE_RESIZE().
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	* matchbox/core/mb-wm-client-base.h
	* matchbox/core/mb-wm-client-base.c
	* matchbox/core/mb-window-manager.c:
	  Use it.

2009-07-08  Aapo Kojo <aapo.kojo@nokia.com>

	Release 0.2.46

2009-07-07  Aapo Kojo <aapo.kojo@nokia.com>

	Patch from Laszlo Pere.

	* matchbox/core/mb-wm-client.c:
	 If this transient already has a registered transient parent we 
	 need to remove the link from the parent.
	 Fixes: NB#125222 - Hildon-desktop crashed when image opened from
	 File Manager.

2009-07-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-types.h
	* matchbox/core/mb-wm-atoms.c:
	  Moved _MAEMO_SUPPRESS_ROOT_RECONFIGURATION so we can use to to...
	* matchbox/core/mb-window-manager.c:
	  ...fake a root window reconfig when we see the toggle offed.